added a signup page, email and password input field components and added the route to get to this page.

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .footer {
     min-height: 50px;
     background: #EB6864;
-    position: relative;
+    position: fixed;
+    left: 0;
+    bottom: 0; width: 100%
 }
 
 .footer span {
