in the merging the loginfunction that updated context was saving an undefined value as the username. fixed that.

--- a/client/src/components/ProfilePicture/ProfilePicture.css
+++ b/client/src/components/ProfilePicture/ProfilePicture.css
@@ -16,14 +16,14 @@ img{
     text-align: center;
 
 }
-ul{
+.ProfilePicture ul{
     padding: 0px;
     background-color: yellow;
     width: 160px;
     margin: 0px;
 }
 
-li{
+.ProfilePicture li{
     list-style: none;
     background-color: green;
     
