margin bottom to main, refactored sign-up form, added create clan page

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -3,7 +3,8 @@
     background: #EB6864;
     position: fixed;
     left: 0;
-    bottom: 0; width: 100%
+    bottom: 0;
+    width: 100%;
 }
 
 .footer span {
