added form UI validations, added fonts, messing with some colors

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     min-height: 50px;
-    background: #EB6864;
+    background: #bb86fc;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -8,7 +8,7 @@
 }
 
 .footer span {
-    color: white;
+    color: #231f20;
     font-weight: bold;
     position: absolute;
     bottom: 0;
