--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,51 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: local('Poppins'), url(./fonts/Poppins-Medium.ttf) format('truetype');
+}
+
+/* @font-face {
+    font-family: 'PTSans';
+    src: local('PTSans'), url(./fonts/PTSans-Regular.ttf) format('truetype');
+} */
+
+input {
+    background-color: #e2e2e2;
+}
+
+body, h1, h2, h3, h4, h5, li, ul, a, button {
+    font-family: Poppins, sans-serif;
+}
+
+body, h1, h2, h3, h4, h5 {
+    color: #e1e1e1;
+    background-color: #202124;
+}
+
+.btn-primary {
+    font-family: Poppins, sans-serif;
+    color: #231f20;
+    background-color: #04dac6;
+    border-color: #018577;
+}
+
+.btn-primary:hover {
+    background-color: #018577;
+    border-color: #04dac6;
+}
+
+.btn-success {
+    font-family: Poppins, sans-serif;
+    color: #231f20;
+    background-color: #04dac6;
+}
+
+.btn-success:hover {
+    background-color: #018577;
+}
+
 html,
 body,
 #root,
@@ -13,5 +58,6 @@ div[data-reactroot] {
 }
 
 main {
+    margin-top: 50px;
     margin-bottom: 200px;
 }
