Allies Bar href and nav img icon href fix

--- a/client/src/components/AlliesBarIcon/alliesBarIcon.css
+++ b/client/src/components/AlliesBarIcon/alliesBarIcon.css
@@ -12,7 +12,7 @@
 }
 
 .allies-icon:hover {
-    background-color:yellow;
+    background-color:#04dac6;
     cursor: pointer;
     transform: scale(1.1);
     
