--- a/client/src/components/AlliesBar/alliesBar.css
+++ b/client/src/components/AlliesBar/alliesBar.css
@@ -1,5 +1,5 @@
 #allies-bar {
-    background-color: gainsboro;
+    background-color: #9c4efa;
     overflow: auto;
     height: 65;
     white-space: nowrap;
