--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,7 +58,7 @@ div[data-reactroot] {
 }
 
 main {
-    margin-top: 50px;
+    margin-top: 10px;
     margin-bottom: 200px;
 }
 
@@ -127,4 +127,7 @@ hr {
   .spinner-border-sm{
       height: 1rem;
       border-width: .2em;
+  }
+  #infoBoard h1 {
+    background-color: #231f20 !important;
   }
