--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     position: fixed;
-    background: #bb86fc;
+    background: #9c4efa;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -8,7 +8,7 @@
 }
 
 .footer span {
-    color: #231f20;
+    color: #e1e1e1;
     font-weight: bold;
     bottom: 0;
     left: 0;
