landing page styling

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     min-height: 50px;
-    background: #bb86fc;
+    background: #9c4efa;
     position: fixed;
     left: 0;
     bottom: 0;
