--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,12 @@
     font-family: 'PTSans';
     src: local('PTSans'), url(./fonts/PTSans-Regular.ttf) format('truetype');
 } */
+body {
+    background-image: url(./images/Logos/grid-bg.png);
+    background-size: cover;
+    background-position: center top;
+}
+
 
 input {
     background-color: #e2e2e2;
@@ -107,6 +113,18 @@ hr {
     border-color: #e2e2e2;
 }
 
+.logo {
+    height: 650px;
+    width: 650px;
+}
+
+.brand {
+    height: 162px;
+    width: 412px;
+}
+
+
+
 @keyframes spinner-border {
     to { transform: rotate(360deg); }
   } 
@@ -125,3 +143,4 @@ hr {
       height: 1rem;
       border-width: .2em;
   }
+
