--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,8 @@ body {
     background-image: url(./images/Logos/grid-bg.png);
     background-size: cover;
     background-position: center top;
+    background-color: #202124;
+
 }
 
 
@@ -28,8 +30,8 @@ body, h1, h2, h3, h4, h5, li, ul, a, button {
 
 body, h1, h2, h3, h4, h5 {
     color: #e1e1e1;
-    background-color: #202124;
 }
+
 
 .btn-primary {
     font-family: Poppins, sans-serif;
@@ -128,6 +130,10 @@ hr {
     width: 30px;
 }
 
+nav > button > a {
+    color: #000;
+}
+
 @keyframes spinner-border {
     to { transform: rotate(360deg); }
   } 
@@ -152,5 +158,5 @@ hr {
   }
 
   #infoBoard h1 {
-    background-color: #231f20 !important;
+    background-color: #202124;
   }
