grammtatical changes on Homepage, added graphic title and bootrap grid to signup page and login page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,6 +145,10 @@ nav > button > a {
     width: 100px;
 }
 
+.LoginTitle {
+    height:100%;
+    width: 100%;
+}
 
 @keyframes spinner-border {
     to { transform: rotate(360deg); }
