css changes left hand rale etc

--- a/client/src/components/ProfilePicture/ProfilePicture.css
+++ b/client/src/components/ProfilePicture/ProfilePicture.css
@@ -6,12 +6,13 @@ img{
 
 .ProfilePicture{
     padding: 5px;
+    padding-right: 0;
     float: left;
     position: absolute;
     top: 60px;
     left: 5px;
     height: 250px;
-    width: 170px;
+    width: 100%;
     text-align: center;
 
 }
