--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,6 +35,12 @@ body, h1, h2, h3, h4, h5, li, ul, a, button {
 body, h1, h2, h4, h5 {
     color: #e1e1e1;
 }
+
+p {
+    font-size: .95rem;
+
+}
+
 h3 {
     color: #04dac6;
     font-size: 1.5rem;
@@ -83,39 +89,57 @@ main {
     height: 250px;
     border: 2px solid #e2e2e2;
     margin: auto;
+    border-Radius: 10px;
+
 }
 
-.selectedPic span {
+/* .selectedPic span {
     display: table;
     margin: 0 auto;
-}
+} */
 
 .selectedPic img {
     width: 100%;
     height: 100%;
+    border: 5px solid #04dac6;
+    background-color: #04dac6;
+    border-Radius: 10px;
+
+
 }
 
 .selectedPic Button {
     position: absolute;
     top: 5%;
-    right: 10%;
+    right: 5%;
 }
 
 .picGrid {
-    height: 450px;
+    height: 100%;
     width: 100%;
-    border: 2px solid #e2e2e2;
+    border: 2px solid #666;
     overflow: scroll;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap; 
+    border-Radius: 10px;
+
 }
 
 .picGrid img {
-    height: 250px;
-    width: 23%;
+    height: 21%;
+    width: 21%;
     margin: 10px;
     border-Radius: 10px;
+}
+
+.img-thumbnail {
+    /* padding: 0.25rem; */
+    background-color: #04dac6;
+    border: 1px solid #04dac6 ;
+    border-radius: 100px;
+    max-width: 100%;
+    height: auto;
 }
 
 hr {
