--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@
 } */
 
 
+
 body {
     background-image: url(./images/Logos/grid-bg.png);
     background-size: cover;
@@ -21,6 +22,11 @@ body {
     z-index: -1;
 
 
+}
+
+.clanProfilePicture img {
+    width: 70%;
+    border-radius: 50%;
 }
 
 .card {
@@ -35,14 +41,17 @@ input {
 
 body, h1, h2, h3, h4, h5, li, ul, a, button {
     font-family: Poppins, sans-serif;
+    
+}
+
+ h2 {
+    background-color: transparent !important;
+    
 }
 
 body, h1, h2, h4, h5 {
     color: #e1e1e1;
 }
-
-
-
 
 
 p {
@@ -52,7 +61,7 @@ p {
 
 h3 {
     color: #04dac6;
-    font-size: 1.5rem;
+    font-size: 1.75em;
     background-color: transparent !important;
 }
 
@@ -63,6 +72,11 @@ h4 {
 h5 {
   
     font-size: .9rem;
+}
+
+.infoboard {
+    width: 850px;
+    height: 158px;
 }
 .btn-primary {
     font-family: Poppins, sans-serif;
@@ -86,6 +100,28 @@ h5 {
     background-color: #018577;
 }
 
+.btn-danger, .btn-secondary {
+    font-family: Poppins, sans-serif;
+
+}
+.btn-danger {
+    background-color: #9c4efa;
+    border-color: #666;
+}
+
+.btn-danger:hover {
+    background-color: #4f2680;
+    border-color: #666;
+
+}
+
+.fa-trash:before {
+    content: "\f1f8";
+    color: #04dac6;
+    font-size: 1.5rem;
+    
+}
+
 html,
 body,
 #root,
@@ -104,6 +140,7 @@ main {
 .mr-5 {
     margin-right: 1.5rem !important;
 }
+
 
 .selectedPic {
     position: relative;
@@ -134,6 +171,10 @@ main {
     position: absolute;
     top: 5%;
     right: 5%;
+}
+
+#postBackground {
+    background-color: transparent !important;
 }
 
 .picGrid {
@@ -231,6 +272,15 @@ nav > button > a {
     background-color: #202124;
   }
 
+  @media only screen and (max-width: 600px) {
 
+    .logo {
+        height: 450px;
+        width: 450px;
+        text-align: center;
+    }
+
+    
+  }
 
   
