--- a/client/src/components/AlliesBar/alliesBar.css
+++ b/client/src/components/AlliesBar/alliesBar.css
@@ -2,4 +2,10 @@
     overflow: auto;
     height: 65;
     white-space: nowrap;
+    margin: auto;
+    width: 45%;
+    padding: 10px;
+    margin-top: 5rem;
+    /* border: 1px solid #666; */
+   
 }
