--- a/client/src/components/PostForm/PostForm.css
+++ b/client/src/components/PostForm/PostForm.css
@@ -1,6 +1,6 @@
 #postTitle {
     color: #e1e1e1;
-    font-size: 23px;
+    font-size: 1.25rem;
 }
 #postBackground {
     background-color: #202124;
