--- a/client/src/components/AlliesBar/alliesBar.css
+++ b/client/src/components/AlliesBar/alliesBar.css
@@ -6,6 +6,7 @@
     width: 45%;
     padding: 10px;
     margin-top: 5rem;
-    /* border: 1px solid #666; */
+    /* border: 1px solid #666;
+    border-radius: 1%; */
    
 }
