--- a/client/src/index.css
+++ b/client/src/index.css
@@ -230,6 +230,9 @@ hr {
 .brand {
     height: 162px;
     width: 412px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .icon {
@@ -255,7 +258,7 @@ nav > button > a {
 }
 
 .allies-header {
-    width: 180px;
+    width:100%;
     color: #fff;
     background-color: #9c4efa;
 }
