--- a/client/src/components/AlliesBar/alliesBar.css
+++ b/client/src/components/AlliesBar/alliesBar.css
@@ -6,6 +6,7 @@
     width: 45%;
     padding: 10px;
     margin-top: 5rem;
+    margin-left: 0rem;
     /* border: 1px solid #532886 ;
     border-radius: 1%; */
    
