css on allieBarIcon

--- a/client/src/components/AlliesBar/alliesBar.css
+++ b/client/src/components/AlliesBar/alliesBar.css
@@ -3,9 +3,9 @@
     height: 65;
     white-space: nowrap;
     margin: auto;
-    width: 45%;
-    padding: 10px;
-    margin-top: 5rem;
+    width: 100%;
+    /* padding: 10px; */
+    /* margin-top: 5rem; */
     margin-left: 0rem;
     /* border: 1px solid #532886 ;
     border-radius: 1%; */
