--- a/client/src/index.css
+++ b/client/src/index.css
@@ -247,8 +247,8 @@ hr {
     height: 162px;
     width: 412px;
     display: block;
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -333,10 +333,14 @@ nav > button > a {
         color: #fff;
         background-color: #9c4efa;
         margin-top: 5rem;
-
-        
     }
+    .LoginTitle {
+        width: 50%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     
+    }
     
   }
 
