--- a/client/src/components/AlliesBarIcon/alliesBarIcon.css
+++ b/client/src/components/AlliesBarIcon/alliesBarIcon.css
@@ -2,11 +2,12 @@
     display:block;
     /* border: 1px #CCC; */
     margin: 2px;
+    margin-left: 15px;
     border: solid 1px;
     border-color: #666;
     text-align: center;
     text-decoration: none;
-    width: 98%;
+    width: 90%;
     padding-top: 10px;
     transition: all .3s ease-in-out;
     border-radius: .25rem;
@@ -16,7 +17,7 @@
 .allies-icon:hover {
     background-color:#04dac6;
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 p {
     color: #e1e1e1;
