nav spacing fix

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -18,6 +18,6 @@
     padding: 3px;
 }
 nav ul {
-    padding-inline-start: 12% !important;
+    /* padding-inline-start: 12% !important; */
     margin-bottom: -12px;
 }
