changing delete button when adding game on EditProfile page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,6 +287,10 @@ nav > button > a {
     
 }
 
+.game-button {
+    background-color: transparent !important;
+    border: 0px;
+}
 
 @keyframes spinner-border {
     to { transform: rotate(360deg); }
